--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 										<li><a href="https://himanshi-png.github.io/Superstore_Data_Analysis/" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<!<article>
+								<!--<article>
 									<header>
 										<h2><a href="https://himanshi-png.github.io/K-Means_Iris_Dataset/">Prediction-Unsupervised ML<br />
 										</a></h2>
@@ -121,7 +121,7 @@
 									<ul class="actions special">
 										<li><a href="https://himanshi-png.github.io/K-Means_Iris_Dataset/" class="button">View Project</a></li>
 									</ul>
-								</article>>
+								</article>-->
 								<article>
 									<header>
 										<h2><a href="https://public.tableau.com/app/profile/himanshi.khatwani">Tableau Projects<br />
