--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 							<li class="active"><a href="index.html">About</a></li>
 							<li class="active"><a href="https://drive.google.com/file/d/15hMVubX28Ob6ontf4HD2rL9q2fJHP_No/view?usp=sharing">Resume</a></li>
 						</ul>
-						<ul class="icons">
+					           <!--<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/himanshikhatwani/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/himanshi-png" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
+						</ul> -->
 					</nav>
 
 				<!-- About -->
